--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
   <header>
-    <div class="container">
+    <div class="hero-img">
+      <img src="semiconductor-hero.jpg" alt="Semiconductor Hero Image">
+    </div>
+    <div class="container header-text">
       <h1>⚡ The Future is Semiconductor</h1>
-      <p>Exploring the power behind the world's technology</p>
+      <p>Powering the planet, one electron at a time</p>
       <a href="#future" class="btn">Explore</a>
     </div>
   </header>
@@ -19,7 +22,7 @@
     <div class="container">
       <h2>🌐 What Are Semiconductors?</h2>
       <p>
-        Semiconductors are materials that have a conductivity between conductors and insulators. They are the building blocks of modern electronics – from smartphones and computers to solar panels and quantum devices.
+        Semiconductors are special materials with electrical conductivity between conductors and insulators. They are essential for building everything from microchips and processors to LEDs and solar panels.
       </p>
     </div>
   </section>
@@ -27,11 +30,12 @@
   <section class="section" id="future">
     <div class="container">
       <h2>🚀 The Future of Semiconductors</h2>
+      <img src="future-chip.jpg" alt="Futuristic Chip" class="feature-img">
       <ul>
-        <li><strong>Quantum Chips:</strong> Quantum computing will revolutionize data processing and encryption.</li>
-        <li><strong>AI Hardware:</strong> Neuromorphic chips mimicking brain neurons for super-efficient AI.</li>
-        <li><strong>Flexible Electronics:</strong> Wearable, bendable devices for everyday use.</li>
-        <li><strong>Green Semiconductors:</strong> Eco-friendly and energy-efficient technology.</li>
+        <li><strong>Quantum Chips:</strong> Unlocking unimaginable computing speeds.</li>
+        <li><strong>AI Hardware:</strong> Mimicking the human brain in silicon.</li>
+        <li><strong>Flexible Electronics:</strong> Foldable, wearable, and shape-shifting devices.</li>
+        <li><strong>Green Semiconductors:</strong> Energy-efficient and sustainable technologies.</li>
       </ul>
     </div>
   </section>
@@ -40,7 +44,7 @@
     <div class="container">
       <h2>🔬 Why It Matters</h2>
       <p>
-        The future of semiconductors affects every industry: healthcare, defense, space, communication, and more. Innovation in this field determines the next technological leap for humanity.
+        Semiconductors are the heartbeat of the digital age. They define the speed, intelligence, and efficiency of future technology — from self-driving cars to brain-computer interfaces.
       </p>
     </div>
   </section>
@@ -50,3 +54,4 @@
   </footer>
 </body>
 </html>
+
