--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </section>
 
   <footer>
-    <p>Made with 💡 by YourName | © 2025</p>
+    <p>Made by Adwaith Nambiar | © 2025</p>
   </footer>
 </body>
 </html>
